templates/fdi-dotstatsuite-de_template.yaml
---
# Source: fdi-dotstatsuite-de/templates/svc/data-explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdi-dotstatsuite-dexplorer
  labels:
    helm.sh/chart: fdi-dotstatsuite-de-0.2.0
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-dexplorer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-dexplorer
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-dexplorer
---
# Source: fdi-dotstatsuite-de/templates/deploy/data-explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdi-dotstatsuite-dexplorer
  labels:
    helm.sh/chart: fdi-dotstatsuite-de-0.2.0
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-dexplorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-dexplorer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-dexplorer
    spec:
      imagePullSecrets:
        - name: artifactory-prod
      serviceAccountName: fdi-dotstatsuite-dexplorer
      securityContext:
        {}
      containers:
        - name: fdi-dotstatsuite-de-dexplorer
          securityContext:
            {}
          image: "artifactory.cloud.statcan.ca/docker/analytics-platform/dotstatsuite-data-explorer-fdi:v13.0.1-56-g40a3596"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
---
# Source: fdi-dotstatsuite-de/templates/ing/data-explorer.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fdi-dotstatsuite-dexplorer
  labels:
    helm.sh/chart: fdi-dotstatsuite-de-0.2.0
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-dexplorer
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "sdmx-dexplorer.dev.cloud.statcan.ca"
      http:
        paths:
          - path: /*
            backend:
              serviceName: fdi-dotstatsuite-dexplorer
              servicePort: 80
---
# Source: fdi-dotstatsuite-de/templates/dr/destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fdi-dotstatsuite-dexplorer
  labels:
    app: fdi-dotstatsuite
    chart: fdi-dotstatsuite-de-0.2.0
    release: release-name
    heritage: Helm
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: "DISABLE"
